--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -36,8 +36,7 @@
             android:layout_weight="0.2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Send"
-            android:background="@color/coolor"
+            android:background="@drawable/message"
             android:id="@+id/send"/>
     </LinearLayout>
 
