--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/bg1main"
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity"
+    >
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -18,15 +20,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Your StoryView -->
-            <xute.storyview.StoryView
-                android:id="@+id/storyView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                app:spaceBetweenImageAndIndicator="1dp"
-                app:storyImageRadius="8dp"
-                app:storyItemIndicatorWidth="1dp" />
 
             <!-- ConstraintLayout with its content -->
             <androidx.constraintlayout.widget.ConstraintLayout
