--- a/app/src/main/res/drawable/white_rounded_button.xml
+++ b/app/src/main/res/drawable/white_rounded_button.xml
@@ -3,14 +3,14 @@
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/light_grey" />
+            <solid android:color="@color/coolor" />
             <stroke android:width="1dp" android:color="@color/white" />
             <corners android:radius="30dp" />
         </shape>
     </item>
     <item android:state_pressed="false">
         <shape>
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/coolor" />
             <stroke android:width="1dp" android:color="@color/white" />
             <corners android:radius="30dp" />
         </shape>
